force-app/main/default/objects/DRC_NBC_Invoice_Lot__c/DRC_NBC_Invoice_Lot__c.object-meta.xml
<CustomObject>
    <label>Invoice Lot</label>
    <nameField>
        <displayFormat>Lot-{0000}</displayFormat>
        <label>Invoice Lot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Lots</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>