force-app/main/default/objects/DRC_NBC_Invoice_Lot__c/fields/DRC_NBC_Invoice__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>DRC_NBC_Invoice__c</referenceTo>
    <relationshipLabel>Invoice Lots</relationshipLabel>
    <relationshipName>Invoice_Lots</relationshipName>
    <type>Lookup</type>
</CustomField>