force-app/main/default/objects/DRC_NBC_Invoice_Lot__c/fields/DRC_NBC_Lot_Complaint_Quantity__c.field-meta.xml
<CustomField>
    <fullName>DRC_NBC_Lot_Complaint_Quantity__c</fullName>
    <label>Lot Complaint Quantity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>