force-app/main/default/objects/DRC_NBC_Invoice_Lot__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DRC_NBC_Invoice__c</columns>
    <columns>DRC_NBC_Product__c</columns>
    <columns>DRC_NBC_Invoice_Line_Item__c</columns>
    <columns>DRC_NBC_Lot_Number__c</columns>
    <columns>DRC_NBC_Lot_Quantity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>